k8s/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
  namespace: myapi-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      serviceAccountName: python-api-sa
      containers:
      - name: python-api
        image: dockermohcine/my-python-api:1.1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1Gi"  
            cpu: "500m"      
          limits:
            memory: "2Gi"   
            cpu: "1"
