k8s/api/api-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-clusterip
  namespace: myapi-dev
spec:
  selector:
    app: python-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # Ingress works best with ClusterIP
