k8s/api/api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-nodeport
  namespace: myapi-dev
spec:
  selector:
    app: python-api
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
      nodePort: 30080  
  type: NodePort
