k8s/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: myapi-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: mtor.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service-clusterip
            port:
              number: 8080
